test/conformance/chainsaw/verifyImages/clusterpolicy/standard/keyed-basic-multiple-image/chainsaw-step-01-apply-2.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: keyed-basic-policy
spec:
  background: false
  failurePolicy: Fail
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: keyed-basic-rule
    verifyImages:
    - attestors:
      - entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAE4o26uVit8tUbFl6D9sT5aO1ttkGz
[...]
              -----END PUBLIC KEY-----
            rekor:
              url: https://rekor.sigstore.dev
      imageReferences:
      - ghcr.io/kyverno/test-verify-image:*
      useCache: false
  validationFailureAction: Enforce
  webhookTimeoutSeconds: 30
